--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
     <!--  子模块  -->
     <modules>
         <module>services</module>
-<!--        <module>model</module>-->
+        <module>model</module>
+        <!--        <module>model</module>-->
 <!--        <module>gateway</module>-->
     </modules>
 
