--- a/services/pom.xml
+++ b/services/pom.xml
@@ -22,6 +22,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.glacier</groupId>
+            <artifactId>model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!-- 配置中心-->
 <!--        <dependency>-->
 <!--            <groupId>com.alibaba.cloud</groupId>-->
