--- a/services/service-product/src/main/resources/application.yaml
+++ b/services/service-product/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
 
       config:
         import-check:
-          enabled: false  # ??????????????????????
+          enabled: false
 
 seata:
-  enabled: false  # ?? Seata???????? globalTransactionScanner ??
+  enabled: false
